removed metadata api, fixed exec & cancel api
 - now exec can call node.js' exec() api directly when async is false
 - changed getChildProcs to findProcs, with execId option, limiting
   scopes to async executions. (sync. exec. may not need management)
 - added some exec-specfic parameters for sync exec.
 - added some additonal properties for ChildProcs, including
   state & exit code, exit signal, to handle background procs properly
 - added some descriptions Execution class properties, especially for
   portability.
